Closed
Bug 1575876
Opened 6 years ago
Closed 6 years ago
Unbreak build on FreeBSD after libc++ changes
Categories
(Core :: WebRTC, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla70
People
(Reporter: jbeich, Assigned: jbeich)
Details
Attachments
(1 file)
|
1.04 KB,
patch
|
bwc
:
review+
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr60+
RyanVM
:
approval-mozilla-esr68+
|
Details | Diff | Splinter Review |
In file included from media/mtransport/nricectx.cpp:82:
In file included from media/mtransport/third_party/nICEr/src/stun/stun_client_ctx.h:41:
In file included from media/mtransport/third_party/nICEr/src/stun/stun.h:45:
In file included from /usr/include/net/if_var.h:84:
/usr/include/sys/lock.h:68:15: error: reference to 'thread' is ambiguous
struct thread **owner);
^
/usr/include/sys/lock.h:42:8: note: candidate found by name lookup is 'thread'
struct thread;
^
/usr/include/c++/v1/__threading_support:397:24: note: candidate found by name lookup is 'std::__1::thread'
class _LIBCPP_TYPE_VIS thread;
^
https://lists.freebsd.org/pipermail/freebsd-gecko/2019-August/009504.html
https://lists.freebsd.org/pipermail/freebsd-gecko/2019-August/009509.html
status-firefox68:
--- → affected
status-firefox69:
--- → affected
status-firefox-esr68:
--- → affected
Sorry, I can't submit on Phabricator due to bug 1536716.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d07bce3339efaa1390ff3232b9934e0b0ea53aaf
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
Can you help with review?
(Try again. I've got confused by email from https://wiki.mozilla.org/Modules/Core#Media_Transport being different from bugzilla login.)
Flags: needinfo?(docfaraday)
Comment 5•6 years ago
|
||
Comment on attachment 9087429 [details] [diff] [review]
v1
Review of attachment 9087429 [details] [diff] [review]:
-----------------------------------------------------------------
Seems fine to me if it works for you.
Attachment #9087429 -
Flags: review+
Pushed by dvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c8773774d969
Drop header unused on FreeBSD that breaks with new libc++. r=bwc
Keywords: checkin-needed
Updated•6 years ago
|
Priority: -- → P2
Comment 7•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Comment on attachment 9087429 [details] [diff] [review]
v1
Beta/Release Uplift Approval Request
- User impact if declined: Broken build on FreeBSD 11.4/12.1/13.0.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Can only break build.
- String changes made/needed:
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Helps building Firefox on recent FreeBSD versions without dowstream modifications e.g., for debugging. ESR is an upstream for Gecko-based projects like TorBrowser, Cliqz, Thunderbird, SeaMonkey, Waterfox, etc., so backporting the fix would help avoid downstream patch churn.
- User impact if declined: Broken build on FreeBSD 11.4/12.1/13.0. None of those are released yet but 12.1 is scheduled on 2019-11-04. ESR68 support cycle will intersect with 12.1 cycle.
- Fix Landed on Version: 70
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Can only break build.
- String or UUID changes made by this patch:
Attachment #9087429 -
Flags: approval-mozilla-esr68?
Attachment #9087429 -
Flags: approval-mozilla-esr60?
Attachment #9087429 -
Flags: approval-mozilla-beta?
status-firefox-esr60:
--- → affected
Comment 9•6 years ago
|
||
Comment on attachment 9087429 [details] [diff] [review]
v1
FreeBSD bustage fix, approved for 69.0rc1, 68.1esr, and 60.9esr.
Attachment #9087429 -
Flags: approval-mozilla-esr68?
Attachment #9087429 -
Flags: approval-mozilla-esr68+
Attachment #9087429 -
Flags: approval-mozilla-esr60?
Attachment #9087429 -
Flags: approval-mozilla-esr60+
Attachment #9087429 -
Flags: approval-mozilla-beta?
Attachment #9087429 -
Flags: approval-mozilla-beta+
Comment 10•6 years ago
|
||
| bugherder uplift | ||
Comment 11•6 years ago
|
||
| bugherder uplift | ||
Comment 12•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•