Bug 1575876 - Drop header unused on FreeBSD that breaks with new libc++. r=bwc, a=RyanVM